<resources>
    <string name="app_name">MSD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginText">Login</string>
    <string name="orText">Or</string>
    <string name="createAccount">Create Account</string>
    <string name="usernameHint">Usernames</string>
    <string name="menuSignout">Signout</string>
    <string name="noRecordsHint">"No Record Found "</string>
    <string name="app_name_full">Malik Siddique Dairy</string>
    <string name="loginSubtitle">Records Manager</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="next">Next</string>
    <string name="enterOTP">Enter OTP</string>
    <string name="verify">Verify</string>
</resources>